--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <h2>To-Do List <img src="icon.png"> </h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="AddTask()">Add</button> 
+                <!-- <button onclick="AddTask()">Add</button>  -->
+                <button id="add-button">Add</button>
             </div>
             <ul id="list-container">
                 <!-- <li class="checked">Task 1</li>
